# CyberArche

./: .coverage  .dockerignore  .env.example  .gitignore  .mcp.json  README.md  docker-compose.yml  pyproject.toml
.claude/: security-scope.yaml
.github/workflows/: ci.yml
apps/cyberarche/web/: .dockerignore  .gitignore  .npmrc  Dockerfile  README.md  nginx.conf  (+6 more)
db/migrations/: 0001_initial.sql  0002_ingestions.sql  0003_connector_slugs.sql  0004_comments.sql  0005_api_keys.sql  0006_teamspaces_favorites.sql  0007_connector_document_scope.sql  0008_folders.sql  0009_inferred_links.sql  0010_notifications.sql  0011_templates.sql  0012_agent_persona_memory.sql  0013_agent_skills.sql  0014_scheduled_agents.sql  0015_google_connections.sql  0016_snapshot_label.sql  0017_notification_preferences.sql  0018_notification_digest.sql  0019_push_subscriptions.sql  0020_collections.sql  0021_collection_reminders.sql
docker/: backend.Dockerfile
docs/: deployment.md  design-brief.md  integration-testing.md
libs/cyberarche/adapters/: pyproject.toml
libs/cyberarche/adapters/src/cyberarche/adapters/: __init__.py
libs/cyberarche/adapters/src/cyberarche/adapters/inbound/http/: dependencies.py  errors.py  realtime.py  schemas.py
libs/cyberarche/adapters/src/cyberarche/adapters/inbound/http/routers/: __init__.py  agent.py  agent_persona.py  agent_skills.py  api_keys.py  auth.py  chat.py  collections.py  connectors.py  documents.py  files.py  folders.py  google.py  health.py  import_.py  knowledge.py  meetings.py  notification_prefs.py  notifications.py  org.py  push.py  scheduled_agents.py  sharing.py  teamspaces.py  templates.py  workspaces.py
libs/cyberarche/adapters/src/cyberarche/adapters/inbound/mcp/: server.py
libs/cyberarche/adapters/src/cyberarche/adapters/outbound/: crypto.py
libs/cyberarche/adapters/src/cyberarche/adapters/outbound/auth/: cyberdyne.py
libs/cyberarche/adapters/src/cyberarche/adapters/outbound/code_exec/: cyberdyne_interpreter.py
libs/cyberarche/adapters/src/cyberarche/adapters/outbound/crdt/: pycrdt_engine.py
libs/cyberarche/adapters/src/cyberarche/adapters/outbound/extraction/: files.py
libs/cyberarche/adapters/src/cyberarche/adapters/outbound/google/: client.py
libs/cyberarche/adapters/src/cyberarche/adapters/outbound/imagegen/: openai_images.py
libs/cyberarche/adapters/src/cyberarche/adapters/outbound/llm/: anthropic.py  openai_compatible.py
libs/cyberarche/adapters/src/cyberarche/adapters/outbound/mcp_client/: fastmcp_client.py  ssrf_guard.py
libs/cyberarche/adapters/src/cyberarche/adapters/outbound/meetings/: cyberflies.py
libs/cyberarche/adapters/src/cyberarche/adapters/outbound/notifications/: webhook.py  webpush.py
libs/cyberarche/adapters/src/cyberarche/adapters/outbound/objectstore/: filesystem.py
libs/cyberarche/adapters/src/cyberarche/adapters/outbound/postgres/: agent_memory.py  agent_runs.py  api_keys.py  collection_reminders.py  collections.py  connectors.py  folders.py  google_connections.py  inferred_links.py  ingestions.py  notification_prefs.py  notifications.py  push_subscriptions.py  repositories.py  scheduled_agents.py  sharing.py  skills.py  teamspaces.py  templates.py  update_log.py
libs/cyberarche/adapters/src/cyberarche/adapters/outbound/rag/: cyberdyne_rag.py
libs/cyberarche/adapters/src/cyberarche/adapters/outbound/redis_infra/: bus.py  queue.py
libs/cyberarche/adapters/src/cyberarche/adapters/outbound/web_media/: dao_backend.py
libs/cyberarche/adapters/src/cyberarche/adapters/wiring/: __init__.py
libs/cyberarche/application/: pyproject.toml
libs/cyberarche/application/src/cyberarche/application/: __init__.py  authz.py  jobs.py  kernel.py
libs/cyberarche/application/src/cyberarche/application/ports/: __init__.py  agent.py  agent_memory.py  api_keys.py  bus.py  code_exec.py  collections.py  crdt.py  extraction.py  folders.py  google_workspace.py  identity.py  images.py  inferred_links.py  llm.py  mcp.py  meetings.py  notifications.py  queue.py  rag.py  repositories.py  scheduled_agents.py  sharing.py  skills.py  storage.py  teamspaces.py  telemetry.py  templates.py  web_media.py
libs/cyberarche/application/src/cyberarche/application/testing/: __init__.py  fakes.py
libs/cyberarche/application/src/cyberarche/application/use_cases/: __init__.py  agent.py  agent_persona.py  api_keys.py  collection_reminders.py  collections.py  connectors.py  document_import.py  documents.py  excalidraw_scene.py  files.py  folders.py  google_workspace.py  knowledge.py  links.py  meeting_notes.py  members.py  notifications.py  org_directory.py  realtime.py  scheduled_agents.py  search.py  sharing.py  skills.py  snapshots.py  teamspaces.py  templates.py  workspace_chat.py  workspaces.py
openspec/: project.md
scripts/: migrate.py
security-findings/: SECURITY_AUDIT.md
services/cyberarche/api/: pyproject.toml
services/cyberarche/api/src/cyberarche/api/: bootstrap.py  config.py  main.py  observability.py  security_middleware.py
services/cyberarche/mcp/: pyproject.toml
services/cyberarche/mcp/src/cyberarche/mcp_server/: main.py
services/cyberarche/workers/: pyproject.toml
services/cyberarche/workers/src/cyberarche/workers/: main.py
tests/: conftest.py  test_agent.py  test_agent_persona.py  test_agent_skills.py  test_api_keys.py  test_auth.py  test_auth_gateway.py  test_bootstrap.py  test_collections.py  test_collections_formula.py  test_collections_relations_rollups.py  test_collections_reminders.py  test_connectors.py  test_crdt_engine.py  test_document_import.py  test_documents.py  test_file_extractor.py  test_files.py  test_folders.py  test_google_workspace.py  test_health.py  test_http_api.py  test_imagegen.py  test_integration_live.py  test_integration_rag_live.py  test_jobs.py  test_knowledge.py  test_links.py  test_llm_adapters.py  test_markdown_blocks.py  test_mcp_client.py  test_mcp_proxy_redirect.py  test_mcp_server.py  test_mcp_service_config.py  test_meeting_notes.py  test_meetings.py  test_notifications.py  test_org_directory.py  test_port_contracts.py  test_postgres_agent_memory.py  (+24 more)
(+522 files in other folders)
