[project]
name = "cyberarche-adapters"
version = "0.1.0"
description = "CyberArche adapters — inbound (HTTP/MCP) and outbound (Postgres, Auth, RAG, LLM, CRDT)"
requires-python = ">=3.12"
dependencies = [
    "cyberarche-domain",
    "cyberarche-application",
    "fastapi>=0.115",
    "httpx>=0.27",
    "pyjwt[crypto]>=2.9",
    "asyncpg>=0.30",
    "pycrdt>=0.14.1",
    "pypdf>=6.14.2",
    "openpyxl>=3.1.5",
    "fastmcp>=3.0",
    "redis>=5.0",
    "email-validator>=2.0",
    "pywebpush>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cyberarche"]
