[project]
name = "cyberarche-application"
version = "0.1.0"
description = "CyberArche application layer — ports and use cases"
requires-python = ">=3.12"
dependencies = ["cyberarche-domain"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cyberarche"]
