[project]
name = "cyberarche-workers"
version = "0.1.0"
description = "CyberArche background workers — ingestion and long-running agent jobs"
requires-python = ">=3.12"
dependencies = [
    "cyberarche-adapters",
    "pydantic-settings>=2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cyberarche"]

[project.scripts]
cyberarche-workers = "cyberarche.workers.main:run"
